# mimir

./: Cargo.toml  README.md  public-dns-tcp.json  public-dns-udp.json  public-dns.json  root.key
.github/workflows/: ci.yml
examples/: lb.json  qr.json  root.key
src/: main.rs
