[package]
name = "domain-simple-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes          = { version = "1.0" }
clap = { version = "=4.3.12", features = ["derive"] }
clap_lex = "=0.5.0"
anstyle = "=1.0.1"
time = "=0.3.23"
domain = { version = "0.10.1-dev", git = "https://github.com/NLnetLabs/domain.git", branch = "load-balancer", features = [ "net", "unstable-client-transport", "unstable-server-transport", "unstable-zonetree", "unstable-validator", "zonefile", "tokio-rustls", "tokio-stream" ] }
futures        = { version = "0.3" }
futures-util = "0"
octseq         = "0.2"
#rustls = "0.26"
serde = { version = "1.0.188", features = ["derive" ] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
toml = "0.8.19"
serde-aux = "4.5.0"
rustls-pemfile = "2.2.0"

# Work around for error when compiling on MacOS:
# error[E0433]: failed to resolve: use of undeclared crate or module `syntax`
[target.'cfg(target_os = "macos")'.dependencies]
regex = "1.7.1"

# Work around for error when compiling on Windows:
# error: type `HKEY__` is private 
[target.'cfg(windows)'.dependencies]
winapi = "0.3"
